Issue #942 style: image stretches in device

--- a/org.ekstep.questionunit.mcq-1.0/renderer/styles/style.css
+++ b/org.ekstep.questionunit.mcq-1.0/renderer/styles/style.css
@@ -171,6 +171,7 @@ img.qc-option-image {
     margin-top: 0%;
     margin-left: -5%;
     height: 56px;
+    object-fit: scale-down;
 }
 
 img.qc-vertical-option-image {
